--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "os-service",
-  "version": "2.1.3",
+  "name": "@tracker1/os-service",
+  "version": "2.2.0",
   "description": "Run Node.JS programs as native Operating System Services.",
   "main": "index.js",
   "directories": {
@@ -10,6 +10,10 @@
     "nan": "^2.13.2"
   },
   "contributors": [
+    {
+      "name": "Michael J. Ryan",
+      "email": "tracker1@gmail.com"
+    },
     {
       "name": "Stephen Vickers",
       "email": "stephen.vickers@nospaceships.com"
